--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/benn0k/weather-fella#readme",
   "dependencies": {
+    "materialize-css": "^1.0.0-rc.2",
     "parcel": "^2.10.3"
   }
 }
